# crm-performance-backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci-cd.yml
common/: pagination.py
config/: urls.py
config/settings/: base.py  dev.py
core/: filters.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: clear_cache.py  populate_data.py
core/migrations/: 0001_initial.py  0002_alter_appuser_birthday_alter_appuser_created_and_more.py
core/tests/: conftest.py  test_filters.py  test_integration.py  test_models.py  test_serializers.py
